# FinCourse_Agent

./: .gitignore  DeFi_健康度监控Agent_项目介绍.md  GIT_GUIDE.md
.github/workflows/: ci.yml
demo/: .env.example  run.py
demo/backend/: agent.py  main.py  requirements.txt  tools.py
demo/frontend/: index.html
各版本代码/: Agent功能改进路线图.docx  FinCourse_Agent_v5_四人任务分工.docx  项目使用与协作手册.docx  项目协作手册_v5.docx
各版本代码/FinTech_小微贷款智能评估系统_v4/FinTech_小微贷款智能评估系统_v4/: README_使用说明.md  启动前端.bat
各版本代码/FinTech_小微贷款智能评估系统_v5/: .env.example  A_成员测试记录.md  B_成员测试记录.md  Dockerfile  README_使用说明.md  docker-compose.yml  start.sh  一键安装启动.bat  启动后端.bat  测试清单.md  项目介绍书.ipynb
各版本代码/FinTech_小微贷款智能评估系统_v5/deploy/: tencent_cloud.sh
各版本代码/FinTech_小微贷款智能评估系统_v5/前端源码/: .env.example  index.html  package-lock.json  package.json
各版本代码/FinTech_小微贷款智能评估系统_v5/后端服务/: bank_engine.py  build_real_sme_db.py  chat_agent.py  chat_history.py  data_loader.py  enterprise_search.py  generate_sme_database.py  kb_bridge.py  kb_rag.py  kb_staleness.py  main.py  ml_inference.py  models.py  multi_agent.py  report_pdf.py  requirements.txt  stress_test.py  test_api.py  what_if.py
各版本代码/kb/: README.md  VERSION
各版本代码/kb/loader/: querier.py  setup.py  validator.py
各版本代码/kb/tools/: generate_guide.py  generate_guide_docx.py  generate_roadmap_docx.py  migrate_data.py
找资料/Agent整合构建/Agent整合构建/: README_用途说明.md
找资料/FinTech_小微企业贷款评估系统/FinTech_小微企业贷款评估系统/: README_使用说明.md  start_backend.bat  一键安装.bat  (+2 more)
找资料/kb/: README.md  VERSION
找资料/kb/loader/: __init__.py  config.py  loader.py  pyproject.toml
找资料/普惠金融Agent_知识库/: README.md
(+82 files in other folders)
