[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "kb-loader"
version = "1.0.0"
description = "Knowledge base loader for SME loan evaluation system"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "jsonschema>=4.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
